# pico-fatfs-reader

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: flash.c  main.c  msc_disk.c  tusb_config.h  usb_descriptors.c
